# fast_zero_e

./: Dockerfile  alembic.ini  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  security.py  settings.py
fast_zero/routers/: auth.py
migrations/: env.py
migrations/versions/: a8cc9ac8dbba_create_todos_table.py  d6ac44ac4be9_create_users_table.py
tests/: conftest.py  test_app.py  test_db,py  test_todos.py  test_users.py
